fix overflow (#32)

--- a/frontend/src/App.module.scss
+++ b/frontend/src/App.module.scss
@@ -9,14 +9,16 @@
 .container {
   position: fixed;
   width: 100%;
-  top: 2rem;
+  height: 100%;
+  top: 0;
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  overflow-y: scroll;
+  overflow-y: auto;
 
   .title {
+    margin-top: 4rem;
     font-size: 2rem;
     font-weight: 500;
   }
